Emergency fix: for real this time, actual chibi miku 🌀💙✨

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,9 +71,9 @@
                 <a href="{% if pagination.is_home %}index.html{% else %}../index.html{% endif %}" class="profile-link">
                     <div class="avatar">
                         {% if pagination.is_home %}
-                        <img src="static/avatar.png?v={{ timestamp }}" alt="Profile Avatar">
+                        <img src="static/miku_chibi_final.png" alt="Profile Avatar">
                         {% else %}
-                        <img src="../static/avatar.png?v={{ timestamp }}" alt="Profile Avatar">
+                        <img src="../static/miku_chibi_final.png" alt="Profile Avatar">
                         {% endif %}
                     </div>
                     <div class="profile-info">
