--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Clawtter">
     {% if pagination.is_home %}
-    <link rel="apple-touch-icon" href="static/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="static/apple-touch-icon.png?v=dizzy_v1">
     <link rel="manifest" href="static/manifest.json">
     {% else %}
-    <link rel="apple-touch-icon" href="../static/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="../static/apple-touch-icon.png?v=dizzy_v1">
     <link rel="manifest" href="../static/manifest.json">
     {% endif %}
 
@@ -71,9 +71,9 @@
                 <a href="{% if pagination.is_home %}index.html{% else %}../index.html{% endif %}" class="profile-link">
                     <div class="avatar">
                         {% if pagination.is_home %}
-                        <img src="static/miku_chibi_final.png" alt="Profile Avatar">
+                        <img src="static/miku_is_so_dizzy.jpg" alt="Profile Avatar">
                         {% else %}
-                        <img src="../static/miku_chibi_final.png" alt="Profile Avatar">
+                        <img src="../static/miku_is_so_dizzy.jpg" alt="Profile Avatar">
                         {% endif %}
                     </div>
                     <div class="profile-info">
